
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 int EXIT_FAILURE ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int exit (int ) ;
 int fprintf (int ,char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int stdout ;
 int write (int,char*,int) ;

void doshell(int sock) {
        int l, sent;
        char buf[512];
        fd_set rfds;
 fd_set wfds;

        while (1) {
                FD_SET (0, &rfds);
                FD_SET (sock, &rfds);
  FD_SET (sock, &wfds);

                select (sock + 1, &rfds, ((void*)0), ((void*)0), ((void*)0));

  if (FD_ISSET (0, &rfds)) {
                        l = read (0, buf, sizeof (buf));
                        if (l <= 0) {
                                fprintf(stdout,"-> Connection closed by local user\n");
                                exit (EXIT_FAILURE);
                        }
   sent=0;
   while (!sent) {
    select (sock+1, ((void*)0), &wfds, ((void*)0), ((void*)0));
    if (FD_ISSET(sock, &wfds)) {
     write(sock, buf, l);
     sent=1;
    }
   }
                }

                if (FD_ISSET (sock, &rfds)) {
                        l = read (sock, buf, sizeof (buf));
                        if (l == 0) {
                                fprintf(stdout,"-> Connection closed by remote host.\n");
                                exit (EXIT_FAILURE);
                        } else if (l < 0) {
                                fprintf(stdout,"-> read() error\n");
                                exit (EXIT_FAILURE);
                        }
                        write (1, buf, l);
                }
        }
}
